# CUHKSZ

./: README.md
Assignment1/: README.md  main.py
Assignment2/: baseline.txt  grade.txt  grader.py  rand_sizes.py  simulator.py  studentComm.py  studentcodeExample.py  studentcode_120090645.py
Assignment2/Classes/: NetworkTrace.py  Scorecard.py  SimBuffer.py  simulator_comm.py
CSC 3002/Assignment1/: Assignment1.pro
CSC 3002/Assignment1/res/: hello.cpp
CSC 3002/Assignment1/src/: Assignment1.cpp  Assignment1.h  BanishLetters.cpp  FindDNAMatch.cpp  FindDNAMatch.h  RemoveComments.cpp  RemoveComments.h  combinatorics.cpp
CSC 3002/Assignment2/: Assignment2.pro
CSC 3002/Assignment2/src/: Assignment2.cpp  calendar.cpp  calendar.h  morsecode.cpp  morsecode.h  reversequeue.cpp  reversequeue.h
CSC 3002/Assignment3/src/: GymnasticsJudge.cpp  intarray.cpp  intarray.h  main.cpp
CSC 3002/Assignment4/src/: HFractal.cpp  KnightsTour.cpp  MergeSort.cpp  SimpleTextEditor.cpp  buffer.cpp  buffer.h  main.cpp
CSC 3002/Assignment5/: hint.txt
CSC 3002/Assignment5/src/: BigIntTest.cpp  PriorityQueueUnitTest.cpp  StringMapTest.cpp  assignment5.cpp  bigint.cpp  bigint.h  pqueue.h  stringmap.cpp  stringmap.h
CSC 3002/Assignment6/src/: Assignment6.cpp  P1PriorityQueue.cpp  P1PriorityQueue.h  P2Traverse.cpp  graphtypes.h  simplegraph.cpp  simplegraph.h
CSC 3100/Assignment_1/: Problem_1.java  Problem_2_d.java
CSC 3100/Assignment_2/: A2_P1_120090645.cpp  A2_P2_120090645.cpp  A2_P3_120090645.cpp  Report.md  p2_AVL_Tree.cpp
CSC 3100/Assignment_3/: Assignment_3.md
CSC 3100/Assignment_4/: p1.cpp  p2.cpp  p3.cpp  p4.cpp
CSC 3100/tut2/: BinarySearch.java  BubbleSort.java
CSC 3100/tut3/: MagicSquare.java  PI.java
CSC 3100/tut5/: PostFix.java  linkedList.java
CSC 3100/tut6_java/: Josephus.java  stackUsingQueue.java
CSC 4005/Project-1/: CMakeLists.txt  REPORT.md
CSC 4005/Project-1/src/: utils.cpp  utils.hpp
CSC 4005/Project-2/: New Microsoft Excel Worksheet.xlsx  REPORT.md
CSC 4005/Project-2/matrices/: matrix256.txt
CSC 4005/Project-2/profile/: locality.data  openmp-1.data  openmp-16.data  openmp-2.data  openmp-32.data  openmp-4.data  openmp-8.data  simd.data
CSC 4005/Project-3/: REPORT.md  perf.sh
CSC 4005/project-4/: CMakeLists.txt
CSC 4005/project-4/src/: nn_classifier.cpp  nn_classifier_openacc.cpp  simple_ml_ext.cpp  simple_ml_ext.hpp  simple_ml_openacc.cpp  simple_ml_openacc.hpp  softmax_classifier.cpp  softmax_classifier_openacc.cpp
CSC 4140/CSC4140_Assignment1/: 120090645_HW_01.md  CMakeLists.txt  README.md  compile_run.sh  main.cpp  templete report.md
CSC 4140/CSC4140_Assignment2/: CMakeLists.txt  README.md  Report.md  scratch.sh
CSC 4140/CSC4140_Assignment2/src/: Triangle.cpp  main.cpp  rasterizer.cpp
CSC 4140/CSC4140_Assignment3/: CMakeLists.txt  README.md
CSC 4140/CSC4140_Assignment3/CGL/include/CGL/: tinyexr.h
CSC 4140/CSC4140_Assignment3/src/: CMakeLists.txt  drawrend.cpp  drawrend.h  main.cpp  rasterizer.cpp  rasterizer.h  svg.cpp  svg.h  svgparser.cpp  svgparser.h  texture.cpp  texture.h  transforms.cpp  transforms.h  triangulation.cpp  triangulation.h
CSC 4140/CSC4140_Assignment3/src/dirent/: dirent.h
CSC 4140/CSC4140_Assignment4/: Assignment 4.md
CSC 4140/CSC4140_Assignment5/: README.md
CSC 4140/CSC4140_Assignment6/: README.md
DDA 2003/Assignment1/: README.md  index.html
DDA 2003/Assignment2/: index.html
DDA 2003/Assignment3/: index.html
DDA 2003/Assignment4/: index.html
DDA 2003/Assignment5/: index.html
ECE 4016/Assignment2/: REPORT.md
PHY 1002/: Introduction Lecture_2021term1_v2(1).pptx
PHY 1002/Exp 1/: Exp 1_Centripetal Force_Short Report.docx
PHY 1002/Exp 2 Formal/: Exp_2_Large_Amplitude_Pendulum_Formal_120090645.tex  calculate.py  command.tex
PHY 1002/Exp 3/: Expt 3 Conservation of Momentum.docx
PHY 1002/Exp 4/: Expt 4b Rotational Inertia (Physical Pendulum)(1).cap
PHY 1002/Exp 5 Formal/: Exp_5_Conservation_of_Angular_Momentum_Formal_120090645.tex  Expt 5 Conservation of Angular Momentum(1).docx
PHY 1002/Exp 7/: Exp 7_Resonance Air Column_Short Report.docx
PHY 1002/Exp 8 Formal/: Lab Report for Driven Damped Harmonic Oscillations.docx
PHY 1002/FormalReport_Guideline/: Lab_report_guideline.tex
Physics Experiment/Exp 2 Formal/: Exp_2_Large_Amplitude_Pendulum_Formal_120090645.xdv  Expt 2 Large Amplitude Pendulum(2).cap
Physics Experiment/Exp 3/: Exp 3_Conservation of Momentum_Short Report.docx
Physics Experiment/Exp 4/: Exp 4_Rotational Inertia_Short Report.docx  Expt 4 Rotational Inertia (Physical Pendulum).docx  Expt 4a Rotational Inertia (Physical Pendulum Period)(1).cap
Physics Experiment/Exp 5 Formal/: Exp_5_Conservation_of_Angular_Momentum_Formal_120090645.xdv  command.tex
Physics Experiment/Exp 6/: Exp 6_Conservation_of_Energy_Short_Report_120090645.docx
Physics Experiment/Exp 8 Formal/: Expt 8 Driven Damped Harmonic Oscillations.docx  comment.txt
Physics Experiment/FormalReport_Guideline/: command.tex
(+225 files in other folders)
